Fix overflow

--- a/src/app/common/components/notification-toaster-v2/notification-toaster-v2.component.ng.scss
+++ b/src/app/common/components/notification-toaster-v2/notification-toaster-v2.component.ng.scss
@@ -46,6 +46,11 @@
     align-items: center;
     gap: $spacing2;
 
+    span {
+      display: inline-block;
+      word-break: break-word;
+    }
+
     .minds-avatar {
       margin: 0;
       width: 40px;
